pkg/envoygateway/envoyproxy-deployment.yaml



apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-envoy-gateway-system-envoygateway-liuxiang1-1b412d52
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: envoygateway-liuxiang1
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  annotations:
    deployment.kubernetes.io/revision: '1'
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      kind: GatewayClass
      name: envoygateway-liuxiang1
      uid: ea59a3b6-2968-4549-9beb-8344be90972d
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      app.kubernetes.io/name: envoy
      gateway.envoyproxy.io/owning-gateway-name: envoygateway-liuxiang1
      gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/managed-by: envoy-gateway
        app.kubernetes.io/name: envoy
        gateway.envoyproxy.io/owning-gateway-name: envoygateway-liuxiang1
        gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
      annotations:
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: '19001'
        prometheus.io/scrape: 'true'
    spec:
      volumes:
        - name: certs
          secret:
            secretName: envoy
            defaultMode: 420
        - name: sds
          configMap:
            name: envoy-envoy-gateway-system-envoygateway-liuxiang1-1b412d52
            items:
              - key: xds-trusted-ca.json
                path: xds-trusted-ca.json
              - key: xds-certificate.json
                path: xds-certificate.json
            defaultMode: 420
            optional: false
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.33.2
          command:
            - envoy
          args:
            - '--service-cluster'
            - envoy-gateway-system/envoygateway-liuxiang1
            - '--service-node'
            - $(ENVOY_POD_NAME)
            - '--config-yaml'
            - |
              admin:
                access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/null
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 19000
              cluster_manager:
                local_cluster_name: envoy-gateway-system/envoygateway-liuxiang1
              node:
                locality:
                  zone: $(ENVOY_SERVICE_ZONE)
              layered_runtime:
                layers:
                - name: global_config
                  static_layer:
                    envoy.restart_features.use_eds_cache_for_ads: true
                    re2.max_program_size.error_level: 4294967295
                    re2.max_program_size.warn_level: 1000
              dynamic_resources:
                ads_config:
                  api_type: DELTA_GRPC
                  transport_api_version: V3
                  grpc_services:
                  - envoy_grpc:
                      cluster_name: xds_cluster
                  set_node_on_first_message_only: true
                lds_config:
                  ads: {}
                  resource_api_version: V3
                cds_config:
                  ads: {}
                  resource_api_version: V3
              static_resources:
                listeners:
                - name: envoy-gateway-proxy-stats-0.0.0.0-19001
                  address:
                    socket_address:
                      address: '0.0.0.0'
                      port_value: 19001
                      protocol: TCP
                  bypass_overload_manager: true
                  filter_chains:
                  - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                        stat_prefix: eg-stats-http
                        normalize_path: true
                        route_config:
                          name: local_route
                          virtual_hosts:
                          - name: prometheus_stats
                            domains:
                            - "*"
                            routes:
                            - match:
                                path: /stats/prometheus
                                headers:
                                - name: ":method"
                                  string_match:
                                    exact: GET
                              route:
                                cluster: prometheus_stats
                        http_filters:
                        - name: envoy.filters.http.router
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                clusters:
                - name: prometheus_stats
                  connect_timeout: 0.250s
                  type: STATIC
                  lb_policy: ROUND_ROBIN
                  load_assignment:
                    cluster_name: prometheus_stats
                    endpoints:
                    - lb_endpoints:
                      - endpoint:
                          address:
                            socket_address:
                              address: 127.0.0.1
                              port_value: 19000
                - connect_timeout: 10s
                  eds_cluster_config:
                    eds_config:
                      ads: {}
                      resource_api_version: 'V3'
                    service_name: envoy-gateway-system/envoygateway-liuxiang1
                  load_balancing_policy:
                    policies:
                    - typed_extension_config:
                        name: 'envoy.load_balancing_policies.least_request'
                        typed_config:
                          '@type': 'type.googleapis.com/envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest'
                          locality_lb_config:
                            zone_aware_lb_config:
                              min_cluster_size: '1'
                  name: envoy-gateway-system/envoygateway-liuxiang1
                  type: EDS
                - connect_timeout: 10s
                  load_assignment:
                    cluster_name: xds_cluster
                    endpoints:
                    - load_balancing_weight: 1
                      lb_endpoints:
                      - load_balancing_weight: 1
                        endpoint:
                          address:
                            socket_address:
                              address: envoy-gateway.envoy-gateway-system.svc.cluster.local.
                              port_value: 18000
                  typed_extension_protocol_options:
                    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                      "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
                      explicit_http_config:
                        http2_protocol_options:
                          connection_keepalive:
                            interval: 30s
                            timeout: 5s
                  name: xds_cluster
                  type: STRICT_DNS
                  transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                      common_tls_context:
                        tls_params:
                          tls_maximum_protocol_version: TLSv1_3
                        tls_certificate_sds_secret_configs:
                        - name: xds_certificate
                          sds_config:
                            path_config_source:
                              path: /sds/xds-certificate.json
                            resource_api_version: V3
                        validation_context_sds_secret_config:
                          name: xds_trusted_ca
                          sds_config:
                            path_config_source:
                              path: /sds/xds-trusted-ca.json
                            resource_api_version: V3
              overload_manager:
                refresh_interval: 0.25s
                resource_monitors:
                - name: "envoy.resource_monitors.global_downstream_max_connections"
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
                    max_active_downstream_connections: 50000
            - '--log-level'
            - info
            - '--cpuset-threads'
            - '--drain-strategy'
            - immediate
            - '--component-log-level'
            - misc:error
            - '--drain-time-s'
            - '60'
          ports:
            - name: metrics
              containerPort: 19001
              protocol: TCP
            - name: readiness
              containerPort: 19003
              protocol: TCP
          env:
            - name: ENVOY_POD_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: ENVOY_POD_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
            - name: ENVOY_SERVICE_ZONE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations['topology.kubernetes.io/zone']
          resources:
            limits:
              cpu: '2'
              memory: 8Gi
            requests:
              cpu: '2'
              memory: 8Gi
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /certs
            - name: sds
              mountPath: /sds
          livenessProbe:
            httpGet:
              path: /ready
              port: 19003
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 19003
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          startupProbe:
            httpGet:
              path: /ready
              port: 19003
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          lifecycle:
            preStop:
              httpGet:
                path: /shutdown/ready
                port: 19002
                scheme: HTTP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
        - name: shutdown-manager
          image: envoyproxy/gateway:v1.6.1
          command:
            - envoy-gateway
          args:
            - envoy
            - shutdown-manager
          env:
            - name: ENVOY_POD_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: ENVOY_POD_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
            - name: ENVOY_SERVICE_ZONE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations['topology.kubernetes.io/zone']
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          lifecycle:
            preStop:
              exec:
                command:
                  - envoy-gateway
                  - envoy
                  - shutdown
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: Always
      terminationGracePeriodSeconds: 360
      dnsPolicy: ClusterFirst
      serviceAccountName: envoy-envoy-gateway-system-envoygateway-liuxiang1-1b412d52
      serviceAccount: envoy-envoy-gateway-system-envoygateway-liuxiang1-1b412d52
      automountServiceAccountToken: false
      securityContext: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - envoy
                topologyKey: kubernetes.io/hostname
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
